# ClickHouseLite

./: .gitignore  CMakeLists.txt
cmake/: find_boost.cmake  find_poco.cmake  find_sparsehash.cmake  find_zlib.cmake  lib_name.cmake  print_include_directories.cmake
contrib/: CMakeLists.txt
dbms/: CMakeLists.txt
dbms/cmake/: find_vectorclass.cmake
dbms/src/: CMakeLists.txt
dbms/src/AggregateFunctions/: registerAggregateFunctions.cpp
dbms/src/Client/: Connection.h
dbms/src/Common/: ConfigProcessor.cpp  ConfigProcessor.h
dbms/src/DataStreams/: FormatFactory.cpp  RemoteBlockInputStream.h
dbms/src/Dictionaries/: DictionarySourceFactory.cpp
dbms/src/Functions/: CMakeLists.txt  FunctionsMiscellaneous.cpp  registerFunctions.cpp
dbms/src/IO/: CompressedReadBuffer.h  ConcatReadBuffer.h
dbms/src/Interpreters/: AsynchronousMetrics.cpp  CMakeLists.txt  Context.cpp  Context.h  ExpressionAnalyzer.cpp  InterpreterAlterQuery.cpp  InterpreterCheckQuery.cpp  InterpreterCreateQuery.cpp  InterpreterDropQuery.cpp  InterpreterRenameQuery.cpp  InterpreterSelectQuery.cpp
dbms/src/Parsers/: ASTAlterQuery.cpp  ASTAlterQuery.h  ASTAsterisk.h  ASTCreateQuery.h  ASTDropQuery.h  ASTRenameQuery.h  ExpressionElementParsers.cpp  ExpressionElementParsers.h  ParserAlterQuery.cpp  ParserCreateQuery.cpp  ParserDropQuery.cpp  ParserRenameQuery.cpp
dbms/src/Server/: CMakeLists.txt  Client.cpp  ConfigReloader.cpp  ConfigReloader.h  HTTPHandlerFactory.h  Server.cpp  TCPHandler.cpp  TCPHandler.h  TCPHandlerFactory.h  config.xml  main.cpp  users.xml
dbms/src/Storages/: CMakeLists.txt  StorageFactory.cpp
dbms/src/Storages/MergeTree/: MergeTreeDataMerger.cpp  MergeTreeDataMerger.h
dbms/src/TableFunctions/: registerTableFunctions.cpp
libs/: CMakeLists.txt
libs/libcommon/cmake/: find_cctz.cmake  find_gperftools.cmake
libs/libdaemon/: CMakeLists.txt
libs/libdaemon/cmake/: find_unwind.cmake
(+4 files in other folders)
